set(CMAKE_CXX_STANDARD 20)

add_executable(0136a  0136a.cpp)
add_executable(0915a  0915a.cpp)
add_executable(0935b  0935b.cpp)
add_executable(1501a  1501a.cpp)
add_executable(1512b  1512b.cpp)
add_executable(1585a  1585a.cpp)
add_executable(1649a  1649a.cpp)
add_executable(1671a  1671a.cpp)
add_executable(1678a  1678a.cpp)
add_executable(1680b  1680b.cpp)
add_executable(1692c  1692c.cpp)
add_executable(1701a  1701a.cpp)